<resources>
    <string name="app_name">SEWA</string>
    <string name="eo_wo_terdekat"><![CDATA[EO & WO Terdekat]]></string>
    <string name="salam"><![CDATA[Coba temukan EO & EO yang Sesuai dengan mu disini?]]></string>
    <string name="populer"><![CDATA[EO & WO Terpopuler]]></string>
    <string name="title_activity_detail">Detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="create">create</string>
    <string name="username">username</string>
    <string name="konfirmasi">konfirmasi</string>
    <string name="submit">submit</string>
    <string name="desc">“pesan MUA gratis Wadrobe? Spesial edisi Covid-19,  SEWA ada promo spesial. Buat kalian pejuang halal, tak perlu bingung lagi. Segera keep pesanan Anda”</string>
    <string name="create_a_account">Create a account</string>
</resources>