<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/iconsewa" />

    <EditText
        android:id="@+id/edituser"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="230dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="15sp"

        />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="230dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="15sp"

        />

    <EditText
        android:id="@+id/editkonfpass"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/konfirmasi"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="15sp"

        />

    <Button
        android:id="@+id/buttonregister"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/roudedbtn"
        android:fontFamily="sans-serif"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:text="you have account? "
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:background="@color/colorTransparantWhite"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="10sp" />

    </LinearLayout>


</LinearLayout>