<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/iconsewa" />

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/roudedbtn"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/roudedbtn2"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>