<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9fb"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"

        android:background="@color/background"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="334dp"
            android:background="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:background="@color/background"
            android:layout_marginRight="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/natalia" />
                <TextView

                    android:layout_width="0dp"
                    android:text="Hai, Natalia"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/buttonfaf"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/button_favorite" />






            </LinearLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:textAlignment="textStart"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="5sp"
                android:text="@string/salam"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/search_bar"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="333dp"
                    android:textColor="@color/black"


                    android:layout_height="match_parent"/>

                <ImageButton


                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:tint="@color/black"
                    android:background="@color/white"
                    android:src="@drawable/carian"
                    android:contextClickable="true"

                    android:textAlignment="textEnd" />

                <!-- <androidx.appcompat.widget.SearchView
                     android:layout_width="match_parent"
                     android:outlineSpotShadowColor="@color/black"
                     android:background="@drawable/search_bar"
                     android:layout_height="match_parent"/>-->
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"

                    android:lineSpacingExtra="6sp"
                    android:text="@string/eo_wo_terdekat"
                    android:textColor="#1c1939"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/nerby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="6sp"
                    android:text="Lihat Selengkapnya"
                    android:textColor="#1c1939"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"

                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:layout_weight="1"
                    android:background="@drawable/natalia"
                    app:cardCornerRadius="8dp">



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/natalia"
                        android:gravity="center"
                        android:orientation="vertical">


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:layout_weight="1"

                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="155dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/natalia" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonpop"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"

                    android:lineSpacingExtra="6sp"
                    android:text="@string/populer"
                    android:textColor="#1c1939"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="6sp"
                    android:text="Lihat Selengkapnya"
                    android:textColor="#1c1939"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="155dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/natalia" />
                    <View
                        android:layout_width="match_parent"
                        android:background="@color/background"
                        android:layout_height="20dp" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="155dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/natalia" />



                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </FrameLayout>


</androidx.core.widget.NestedScrollView>